objects/Alert_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Alert__c</fullName>
        <label>Alert</label>
        <referenceTo>Alert__c</referenceTo>
        <relationshipLabel>Alert Details</relationshipLabel>
        <relationshipName>Alert_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipLabel>Alert Details</relationshipLabel>
        <relationshipName>Alert_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HostIDRefKey_End_Date__c</fullName>
        <label>HostIDRefKey End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HostId_Refkey_Title__c</fullName>
        <label>HostId/Refkey Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mark_As_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark As Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mfg_Release_Platform__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mfg_Release_Platform</label>
        <referenceTo>Mfg_Release_Platforms__c</referenceTo>
        <relationshipLabel>Alert Details</relationshipLabel>
        <relationshipName>Alert_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isHostIDAlert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if alert is type of host ID then we will mark it as checked</description>
        <label>isHostIDAlert</label>
        <type>Checkbox</type>
    </fields>
    <label>Alert Detail</label>
    <nameField>
        <displayFormat>AD-{00000000}</displayFormat>
        <label>Alert Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alert Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>